--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,20 @@
 <head>
     <title>Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reser.css/reset.css">
 </head>
 
-<body>
+
+
+</html><body>
     <div class="container">
         <header>
             <h1>Jason Gonzalez</h1>
             <nav>
                 <ul>
-                    <li><a href="About">About|</a></li>
-                    <li><a href="Contact">Contact|</a></li>
-                    <li><a href="Portfolio">Portfolio|</a></li>
+                    <li><a href="index.html">About|</a></li>
+                    <li><a href="contact.html">Contact|</a></li>
+                    <li><a href="portfolio.html">Portfolio|</a></li>
                 </ul>
             </nav>
         </header>
@@ -43,5 +46,3 @@
         <footer>copyright 2017 Jason Gonzalez</footer>
     </div>
 </body>
-
-</html>
