--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reser.css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css/style.css">
 </head>
 
@@ -11,12 +12,13 @@
 <body>
     <div class="container">
         <header>
+
             <h1>Jason Gonzalez</h1>
             <nav>
                 <ul>
-                    <li><a href="About">About|</a></li>
-                    <li><a href="Contact">Contact|</a></li>
-                    <li><a href="Portfolio">Portfolio|</a></li>
+                    <li><a href="index.html">About|</a></li>
+                    <li><a href="contact.html">Contact|</a></li>
+                    <li><a href="portfolio.html">Portfolio|</a></li>
                 </ul>
             </nav>
         </header>
@@ -25,8 +27,8 @@
             <img src="http://lorempixel.com/125/125/transport/10/cc">
             <img src="http://lorempixel.com/124/125/transport/10/cc">
             <img src="http://lorempixel.com/125/125/sports/5/cc">
-            <img src="http://lorempixel.com/125/125/city/7/cc">
-            <img src="http://www.flickr.com/photos/carlosluzz/">
+            <img src="http://lorempixel.com/output/transport-q-c-230-230-9.jpg">
+            <img src="http://lorempixel.com/output/city-h-c-200-220-8.jpg">
         </section>
         <aside>
             <h3>Connect with me</h3>
